# kaggle

./: .replit  pyproject.toml
dataframe/: dataframe.py  matrix.py  parse_line.py
quiz_2-5/: quiz_2-5.py
quiz_2-6/: StudentEnrollment.csv  quiz2-6.py
titanic/: assignment_102.py  assignment_104.py  assignment_106.py  assignment_107.py  assignment_108.py  assignment_110.py  assignment_112.py  assignment_113.py  assignment_117.py  assignment_120.py  assignment_122.py  assignment_129.py  calc_accuracies.py  data_loading.py  dataframe.py  k_means_clustering.py  kaggle_experiments.py  kaggle_titanic_csv.py  parse_line.py  unknowns_to_predict.csv
titanic/submissions/: predictions.csv
