[tool.poetry]
name = "kaggle"
version = "0.1.0"
description = ""
authors = ["C0BBL3 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
decision-tree = "^0.04"
sklearn = "^0.0"
dataframe = "^0.2.1"
matrix = "^2.0.1"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
